binding to index 0

--- a/ValidationBox/MainWindow.xaml
+++ b/ValidationBox/MainWindow.xaml
@@ -24,6 +24,7 @@
             </TextBox.Text>
         </TextBox>
 
+        <TextBlock Text="{Binding Path=(Validation.Errors)[0].ErrorContent, ElementName=TextBox}" Foreground="DarkRed" />
         <TextBlock Foreground="Red">
             <TextBlock.Text>
                 <MultiBinding Converter="{x:Static validationBox:FirstErrorForElementMultiValueConverter.Default}">
