--- a/ValidationBox/MainWindow.xaml
+++ b/ValidationBox/MainWindow.xaml
@@ -24,7 +24,28 @@
             </TextBox.Text>
         </TextBox>
 
-        <TextBlock Text="{Binding Path=(Validation.Errors)[0].ErrorContent, ElementName=TextBox}" Foreground="DarkRed" />
+        <TextBlock Foreground="DarkRed" Text="{Binding Path=(Validation.Errors)[0].ErrorContent, ElementName=TextBox}" />
+
+        <TextBlock Foreground="Salmon">
+            <TextBlock.Text>
+                <MultiBinding StringFormat="HasError: {0} FirstError: {1}">
+                    <Binding ElementName="TextBox" Path="(Validation.HasError)" />
+                    <Binding ElementName="TextBox" Path="(Validation.Errors)[0].ErrorContent" />
+                </MultiBinding>
+            </TextBlock.Text>
+        </TextBlock>
+
+        <TextBlock Foreground="Gray">
+            <TextBlock.Text>
+                <MultiBinding StringFormat="HasError: {0} FirstError: {1}">
+                    <Binding ElementName="TextBox" Path="(Validation.HasError)" />
+                    <Binding Converter="{x:Static validationBox:ErrorContentConverter.Default}"
+                             ElementName="TextBox"
+                             Path="(Validation.Errors)[0].ErrorContent" />
+                </MultiBinding>
+            </TextBlock.Text>
+        </TextBlock>
+
         <TextBlock Foreground="Red">
             <TextBlock.Text>
                 <MultiBinding Converter="{x:Static validationBox:FirstErrorForElementMultiValueConverter.Default}">
