--- a/ValidationBox/MainWindow.xaml
+++ b/ValidationBox/MainWindow.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="ValidationBox.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:autoRowGrid="http://gu.se/AutoRowGrid"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:validationBox="clr-namespace:ValidationBox"
@@ -9,6 +8,21 @@
         Width="525"
         Height="350"
         mc:Ignorable="d">
+    <Window.Resources>
+        <Style TargetType="{x:Type TextBox}">
+            <Setter Property="AutomationProperties.ItemStatus">
+                <Setter.Value>
+                    <MultiBinding StringFormat="HasError: {0} FirstError: {1}">
+                        <Binding Path="(Validation.HasError)" RelativeSource="{RelativeSource Self}" />
+                        <Binding Path="(Validation.Errors)[0].ErrorContent" 
+                                 RelativeSource="{RelativeSource Self}" 
+                                 Converter="{x:Static validationBox:ErrorContentConverter.Default}"
+                                 FallbackValue=""/>
+                    </MultiBinding>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <Window.DataContext>
         <validationBox:ViewModel />
     </Window.DataContext>
